monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0278/A0278a.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.invalid.A0278;

component grammar A0278a{


    interface A;

}
